codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• 处 理 中  (0s • esc 中 断 )      
                              
                              
› Ask Codex to do anything    
                              
  ? 快 捷 键    剩 余 上 下 文  100%
